--- a/src/components/ubicacion.css
+++ b/src/components/ubicacion.css
@@ -10,12 +10,9 @@ font-size: 2em;
 margin-bottom: 10px;
 }
 
-p {
-color:white;
-font-size: 1.2em;
-margin-bottom: 10px;
+.ubicacion {
+    color: aquamarine;
 }
-
 ul {
 color: black;
 list-style: none;
