--- a/src/pages/AboutUs/about.css
+++ b/src/pages/AboutUs/about.css
@@ -21,14 +21,14 @@ h2 {
 }
 
 p {
-    
+    color: black;
     font-size: 1.2em;
     text-align: center;
     color: #333333;
 }
 
 ul {
-    
+    color: black;
     list-style: none;
     padding: 0;
     margin: 0;
