--- a/src/Home.css
+++ b/src/Home.css
@@ -3,7 +3,7 @@ main {
 flex-grow: 1;
 text-align: center;
 padding: 20px;
-background-color: antiquewhite;
+background-color:black;
 }
 .texto{
     color: white;
@@ -27,4 +27,7 @@ margin-bottom: 20px;
 .container {
 display: flex;
 flex-direction: column;
+margin-top: 1px;
+margin-bottom: 1px;
+background-color: black;
 }
