--- a/src/pages/AboutUs/about.css
+++ b/src/pages/AboutUs/about.css
@@ -11,24 +11,24 @@
 }
 
 h2 {
+    color: white;
     height: 5vh;
     display: flex;
     justify-content: center;
     font-size: 2em;
     margin-bottom: 10px;
-    color: #333333;
     /* Color de texto para resaltar en el fondo */
 }
 
 p {
-    color: black;
+    margin-top: 60px;
     font-size: 1.2em;
     text-align: center;
-    color: #333333;
+    color: white;
 }
 
 ul {
-    color: black;
+    color: white;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -39,8 +39,13 @@ li {
 }
 
 h3 {
-    height: 13vh;
+    color: white;
+    height: 8vh;
     font-size: 1.5em;
-    margin-bottom: 10px;
-    color: #333333;
+    margin-bottom: 1px;
+    
+}
+.container {
+    display: flex;
+    flex-direction: column;
 }
